<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/colorPrimary"
    android:padding="@dimen/widget_margin">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/widget_titles"
        >

    <TextView
        tools:text="Abstract News"
        android:id="@+id/appwidget_appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/abstract_news"
        android:text="@string/appwidget_text"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold|italic" />
        <TextView
            android:id="@+id/appwidget_podcastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:contentDescription="@string/podcast_title_widget"
            android:text="@string/appwidget_text"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/widget_playbutton"
        android:contentDescription="@string/toggle_play_and_pause"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:src="@drawable/ic_play_circle_outline_black_24dp"
        android:src="@drawable/ic_play_circle_outline_black_24dp"
        android:layout_margin="8dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        />

</RelativeLayout>