<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/thumbnail_image_view"
            android:layout_width="75dp"
            android:layout_height="match_parent"

            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:contentDescription="@string/podcast_title"

                android:padding="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="monospace"
                tools:text="Podcast Title" />

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/duration_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:contentDescription="@string/podcast_length"
                    android:padding="8dp"
                    android:textColor="@color/dkgray"
                    tools:text="5:55" />

                <TextView
                    android:id="@+id/date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/release_date"
                    android:padding="8dp"
                    android:textColor="@color/dkgray"
                    tools:text="04/20/16" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>